<resources>
    <string name="app_name">Mobile Covid Info</string>
    <string name="total_de_casos">Total de casos:</string>
    <string name="total_de_suspeitos">Total de suspeitos:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_de_mortes">Total de mortes:</string>
    <string name="total_de_recusados">Total de recusados:</string>
    <string name="comentarios">Comentarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="states">
        <item>Selecione</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espirito Santo</item>
        <item>Goías</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraiba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>
