<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.StateDetailsFragment">

        <TextView
            android:id="@+id/txtEstado"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Estado" />

        <TextView
            android:id="@+id/txtSgila"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtEstado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtEstado"
            app:layout_constraintTop_toTopOf="@+id/txtEstado"
            tools:text="Sigla" />

        <TextView
            android:id="@+id/txtCasos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/total_de_casos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEstado" />

        <TextView
            android:id="@+id/txtSuspeitos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/total_de_suspeitos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCasos" />

        <TextView
            android:id="@+id/txtMortes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/total_de_mortes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSuspeitos" />

        <TextView
            android:id="@+id/txtNegados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/total_de_recusados"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMortes" />

        <TextView
            android:id="@+id/txtComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/comentarios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNegados" />

        <TextView
            android:id="@+id/txtTotalCasos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtCasos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtCasos"
            app:layout_constraintTop_toBottomOf="@+id/txtSgila" />

        <TextView
            android:id="@+id/txtTotalSuspeitos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtSuspeitos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtSuspeitos"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalCasos" />

        <TextView
            android:id="@+id/txtTotalMortes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtMortes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtMortes"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalSuspeitos" />

        <TextView
            android:id="@+id/txtTotalRecusados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtNegados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNegados"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalMortes" />

        <TextView
            android:id="@+id/txtTotalComentarios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtComentarios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtComentarios"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalRecusados" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>